fix the bug where the questions section have gaps

--- a/Rod/css/home.css
+++ b/Rod/css/home.css
@@ -287,7 +287,7 @@
     }
 
     .sectionQuestions {
-        margin-left: 215px;
+        margin-left: 211px;
     }
 
     .question {
